--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="script.js"></script>
+<div class="container">
+    <div class="todo">
+        <h2>TODO-List</h2>
+        <div class="row"></div>
+        <input id="myInput" placeholder="Add a new task">
+            <button id="addBtn">Lisää</button>
+    
+            <ul id="myUL">
+            <li class="checked">Mene töihin</li>
+            <li>Käy kaupassa</li>
+            </ul>
+            </div>
+        </div>
+    </div>
+<script src="script.js"></script>
 </body>
 </html>
