--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="row"></div>
         <input id="myInput" placeholder="Add a new task">
             <button id="addBtn">Lisää</button>
-    
             <ul id="myUL">
             <li class="checked">Mene töihin</li>
             <li>Käy kaupassa</li>
             </ul>
+            <button id="clearBtn">Clear</button>
             </div>
         </div>
     </div>
