--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <div class="row"></div>
         <input id="myInput" placeholder="Add a new task">
             <button id="addBtn">Lisää</button>
+            <div id="inputWarning" class="warning-message" aria-live="polite" hidden>Kirjoita jotain!</div>
             <ul id="myUL">
-            <li class="checked">Mene töihin</li>
-            <li>Käy kaupassa</li>
             </ul>
             <button id="clearBtn">Clear</button>
             </div>
