--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!-- Luodaan DIV-elementti TODO-listalle -->
 <div class="container">
     <div class="todo">
         <h2>TODO-List</h2>
         <div class="row"></div>
         <input id="myInput" placeholder="Add a new task">
+        <!-- Lisätään napit addBtn, clearBtn -->
             <button id="addBtn">Lisää</button>
+            <!-- Lisätään virheviestille oma DIV, kun kenttä on tyhjä -->
             <div id="inputWarning" class="warning-message" aria-live="polite" hidden>Kirjoita jotain!</div>
+            <!-- Luodaan lista -->
             <ul id="myUL">
             </ul>
             <button id="clearBtn">Clear</button>
