--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <!-- Luodaan lista -->
             <ul id="myUL">
             </ul>
+            <!-- Kaikkien listauksien poisto -nappi -->
             <button id="clearBtn">Clear</button>
             </div>
         </div>
     </div>
+<!-- Scripti -->
 <script src="script.js"></script>
 </body>
 </html>
