--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>TODO-List</h2>
         <div class="row"></div>
         <input id="myInput" placeholder="Add a new task">
-        <!-- Lisätään napit addBtn, clearBtn -->
+        <!-- Lisätään napit addBtn -->
             <button id="addBtn">Lisää</button>
             <!-- Lisätään virheviestille oma DIV, kun kenttä on tyhjä -->
             <div id="inputWarning" class="warning-message" aria-live="polite" hidden>Kirjoita jotain!</div>
